--- a/index.html
+++ b/index.html
@@ -6,19 +6,48 @@
   <title>Pepper</title>
   <link rel="stylesheet" href="css/reset.css">
   <link href="fonts/stylesheet.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header class="header">
-    <h1 style="">Bonjour pepper</h1>
-  </header>
-  <main class="main">
-
-  </main>
-  <footer class="footer">
-
-  </footer>
-
+  <div class="wrapper">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__left">
+            <a href="/" class="header__logo">
+              <img src="img/logo.png" alt="logo" class="header__logo-img">
+              <span>Jenildik.kz</span>
+            </a>
+            <button class="btn btn--menu header__menu-btn">
+              <span class="btn__text">Меню</span>
+              <span class="material-symbols-outlined btn__icon">arrow_drop_down</span>
+            </button>
+          </div>
+          <div class="header__right">
+            <form action="" class="header__form">
+              <span class="material-symbols-outlined header__form-icon">search</span>
+              <input class="header__form-input" type="search" placeholder="Пойск Брендов, Товаров и т.д.">
+            </form>
+            <button class="btn btn--register header__register-btn">
+              <span class="material-symbols-outlined btn__icon">person</span>
+              <span class="btn__text">Зарегистрироваться/Войти</span>
+            </button>
+            <button class="btn btn--add header__add-btn">
+              <span class="material-symbols-outlined btn__icon">add</span>
+              <span class="btn__text">Добавить</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+    
+    </main>
+    <footer class="footer">
+    
+    </footer>
+  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
